--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <h1 class="u-text u-text-1"><b>Current</b>&nbsp;activity</h1>
                   <h6 class="u-text u-text-2">Currently I am working on the following:</h6>
                   <ul class="u-text u-text-3">
-                    <li>AI engineer at Wirk: End-to-end information extraction from documents, with OCR, template extraction for structured documents, NLP Question answering for unstructured documents, using state-of-the-art technologies. </li>
+                    <li>AI engineer at Wirk: End-to-end information extraction from documents, with OCR, template extraction for structured documents and NLP Question answering with finee-tuned CamemBert for unstructured documents, using state-of-the-art technologies. </li>
                     <li>Deploying and industrializing ML models: <b>MLOps</b></li>
 		    <li><a href="https://github.com/YousOuad/XAI" class=" u-text-palette-1-base" target="_blank">Explainable AI (XAI)</a></li>    
                     <li>Handling missing values (semi-supervised learning, clustering...)</li>
@@ -194,7 +194,7 @@
       
     <section class="u-align-left u-clearfix u-section-6" id="sec-8b92">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-1"><b>Project</b> Examples </h1> 
+        <h1 class="u-text u-text-1"><b>Some</b> projects </h1> 
 	
         <h2 style = "font-size: 26px"  class ="u-text u-text-2"><b>Exploratory Data Analysis</b></h2>
         
